# Series-diff

./: .gitignore  INFRA_README.md  Makefile  Pulumi.yaml  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: AWS-CD.yml  AWS-CI.yml  Flask-API-CI.yml  React-App-CI.yml
Flask-API/: Dockerfile  Dockerfile.executor  Dockerfile.local  README.md  container.py  gunicorn_config.py  main.py  pyproject.toml  requirements.txt
Flask-API/interfaces/: plugin_interface.py
Flask-API/services/: metric_service.py  plugin_service.py  sandboxed_executor.py  time_series_manager.py
Flask-API/tests/: test_metric_service.py  test_plugin_service.py  test_sandboxed_executor.py  test_time_series_manager.py
Flask-API/utils/: data_utils.py  time_utils.py
client/: .dockerignore  .gitignore  README.md  package-lock.json  package.json  playwright.config.ts  tsconfig.json
client/public/: index.html  manifest.json
client/src/: App.css  App.tsx  reportWebVitals.ts
client/tests/: dashboard-advanced.spec.ts  dashboard-all-metrics.spec.ts  dashboard-cache-persistence.spec.ts  dashboard-custom-metrics.spec.ts  dashboard-error-handling.spec.ts  dashboard-initialization.spec.ts  dashboard-interaction.spec.ts  dashboard-metrics-selection.spec.ts  dashboard.spec.ts  data-page.spec.ts  dummy_test.spec.ts  metrics-page.spec.ts  navigation.spec.ts
docs/: AWS_SETUP.md  CONFIGURATION.md  DEPLOYMENT.md  PUBLIC_REPO_GUIDE.md  SECURITY.md
infra/: Pulumi.yaml  __main__.py  infra_config.py  pyproject.toml
infra/docs/: INFRA_README.md
infra/modules/: __init__.py  alb.py  amplify.py  cognito.py  dns.py  ecr.py  (+5 more)
scripts/: install-git-hooks.sh  pre-commit-hook.sh  setup-config.sh  setup-github-token.sh
(+148 files in other folders)
