[project]
name = "flask-api"
version = "0.1.0"
description = "Backend application for SeriesDiff app."
authors = [
    {name = "misko02",email = "misko20023@wp.pl"}
]
license = {text = "GNU General Public License"}
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "flask-cors (>=6.0.1,<7.0.0)",
    "dtw-python (>=1.7.2,<2.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "statsmodels (>=0.14.5,<0.15.0)",
    "scipy (>=1.16.3,<2.0.0)",
    "numpy (>=2.3.4,<3.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "coverage (>=7.6.0,<8.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "flake8 (>=7.3.0,<8.0.0)"
]
